--- a/config/config.json
+++ b/config/config.json
@@ -1,6 +1,6 @@
 {
   "development": {
-    "username": "toto",
+    "username": "csgo",
     "password": "FDFhugsyuga323*",
     "database": "graphql",
     "host": "127.0.0.1",
